--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 <ul>
   <li>Vision-and-language pre-training [<a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://zhuanlan.zhihu.com/p/141089155" target="_blank" rel="noopener noreferrer">2</a>]</li>
   <li>Self-supervised visual reprensetation learning [<a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="noopener noreferrer">1</a>]</li>
-  <li>Deep generative models at scale [<a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="noopener noreferrer">2</a>, <a href="https://zhuanlan.zhihu.com/p/122250953" target="_blank" rel="noopener noreferrer">3</a>]</li>
+  <li>Deep generative models at scale [<a href="http://chunyuan.li/assets/pdf/Scaling_DGMs_chunyl.pdf" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="noopener noreferrer">2</a>, <a href="https://zhuanlan.zhihu.com/p/122250953" target="_blank" rel="noopener noreferrer">3</a>]</li>
 </ul>
 
-<p>I completed my PhD in machine learning at <a href="https://duke.edu/" target="_blank" rel="noopener noreferrer">Duke University</a>, advised by Prof. <a href="http://people.ee.duke.edu/~lcarin" target="_blank" rel="noopener noreferrer">Lawrence Carin</a>. My PhD research studied <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="noopener noreferrer">probabilistic deep learning</a>.</p>
+<p>I completed my PhD in machine learning at <a href="https://duke.edu/" target="_blank" rel="noopener noreferrer">Duke University</a>, advised by Prof. <a href="http://people.ee.duke.edu/~lcarin" target="_blank" rel="noopener noreferrer">Lawrence Carin</a>. My PhD research studied <a href="http://chunyuan.li/assets/pdf/PhD_research_cli.pdf" target="_blank" rel="noopener noreferrer">probabilistic deep learning</a>. <a href="http://chunyuan.li/assets/pdf/CV_ChunyuanLi.pdf" target="_blank" rel="noopener noreferrer">[CV/Resume]</a> </p>
 
 
     </div>
