--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
           <th scope="row">Apr 21, 2022</th>
           <td>
             
-              Two papers are released:
+              Two papers are released <a href="https://datarelease.blob.core.windows.net/tutorial/VLP-Tutorial_2022/vlp_for_v_part3.pdf" target="_blank" rel="noopener noreferrer">[CVPR Tutorial]</a>:
 <ul>
   <li>
     <a href="https://arxiv.org/abs/2204.09222" target="_blank" rel="noopener noreferrer">[K-LITE]</a> demonstrates the effectiveness of external knowledge to improve language-image models (UniCL/CLIP/GLIP) in zero-/few-shot task transfer
   </li>
   <li>
-    <a href="https://arxiv.org/abs/2204.08790" target="_blank" rel="noopener noreferrer">[ELEVATER]</a> is a platform with 20 image classification and 35 object detection public datasets for evaluating language-image models in task-level visual transfer
+    <a href="https://arxiv.org/abs/2204.08790" target="_blank" rel="noopener noreferrer">[ELEVATER]</a> is a platform with 20 image classification and 35 object detection public datasets for evaluating language-image models in task-level visual transfer. <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/" target="_blank" rel="noopener noreferrer">[Benchmark Website]</a>
   </li>
 </ul>
 
@@ -198,7 +198,7 @@
             
               Upcoming events as a co-organizer:
 <ul>
-  <li>CVPR 2022 tutorial on <a href="https://cvpr2022.thecvf.com/tutorial-selections" target="_blank" rel="noopener noreferrer">Recent Advances in Vision-and-Language Pre-training</a>
+  <li>CVPR 2022 tutorial on <a href="https://vlp-tutorial.github.io/" target="_blank" rel="noopener noreferrer">Recent Advances in Vision-and-Language Pre-training</a>
 </li>
   <li>ECCV 2022 workshop on <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild</a>
 </li>
