--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <th scope="row">Apr 21, 2022</th>
           <td>
             
-              Two papers are released <a href="https://datarelease.blob.core.windows.net/tutorial/VLP-Tutorial_2022/vlp_for_v_part3.pdf" target="_blank" rel="noopener noreferrer">[CVPR Tutorial]</a>:
+              Two papers are released <a href="https://datarelease.blob.core.windows.net/tutorial/VLP-Tutorial_2022/vlp_for_v_part3.pdf" target="_blank" rel="noopener noreferrer">[CVPR Tutorial -- CV in the Wild: Knowledge & Benchmark]</a>
 <ul>
   <li>
     <a href="https://arxiv.org/abs/2204.09222" target="_blank" rel="noopener noreferrer">[K-LITE]</a> demonstrates the effectiveness of external knowledge to improve language-image models (UniCL/CLIP/GLIP) in zero-/few-shot task transfer
@@ -229,7 +229,7 @@
   <li>
     UniCL <a href="https://arxiv.org/abs/2204.03610" target="_blank" rel="noopener noreferrer">[paper]</a> <a href="github.com/microsoft/UniCL">[code]</a> introduces the unified language-image-label contrast; UniCL is an academic-friendly version of <a href="https://arxiv.org/abs/2111.11432" target="_blank" rel="noopener noreferrer">[Microsoft Florence]</a>:
   </li>
-  <li>GLIP <a href="arXiv%20preprint%20arXiv:2112.03857">[paper]</a> <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">[code]</a> Oral Presentation</li>
+  <li>GLIP <a href="arXiv%20preprint%20arXiv:2112.03857">[paper]</a> <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">[code]</a> Oral Presentation, Best Paper Award Finalist</li>
   <li>Lafite <a href="https://arxiv.org/abs/2111.13792" target="_blank" rel="noopener noreferrer">[paper]</a> <a href="https://github.com/drboog/Lafite" target="_blank" rel="noopener noreferrer">[code]</a>
 </li>
   <li>RegionCLIP <a href="https://arxiv.org/abs/2112.09106" target="_blank" rel="noopener noreferrer">[paper]</a> <a href="https://github.com/microsoft/RegionCLIP" target="_blank" rel="noopener noreferrer">[code]</a>
