--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ I have served as an Area Chair (or SPC) for NeurIPS, EMNLP &amp; AAAI, and a Gue
 introduces the unified language-image-label contrast; UniCL is an academic-friendly version of <a href="https://arxiv.org/abs/2111.11432" target="_blank" rel="noopener noreferrer">[Microsoft Florence]</a>:
   </li>
   <li>
-    GLIP [<a href="arXiv%20preprint%20arXiv:2112.03857">paper</a>, <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="hhttps://huggingface.co/spaces/haotiz/glip-zeroshot-demo" target="_blank" rel="noopener noreferrer">demo</a>] Oral Presentation
+    GLIP [<a href="arXiv%20preprint%20arXiv:2112.03857">paper</a>, <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="hhttps://huggingface.co/spaces/haotiz/glip-zeroshot-demo" target="_blank" rel="noopener noreferrer">demo</a>] Oral Presentation, CVPR Best Paper Finalist
   </li>
   <li>
     RegionCLIP [<a href="https://arxiv.org/abs/2112.09106" target="_blank" rel="noopener noreferrer">paper</a>, <a href="https://github.com/microsoft/RegionCLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="https://huggingface.co/spaces/CVPR/regionclip-demo" target="_blank" rel="noopener noreferrer">demo</a>]
