--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@ I have served as an Area Chair (or SPC) for NeurIPS, EMNLP &amp; AAAI, and a Gue
 
 <hr>
 
-<p><img class="emoji" title=":loudspeaker:" alt=":loudspeaker:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4e2.png" height="20" width="20"> <strong>Call for Papers &amp; Participation</strong>: ECCV Workshop and Challenge on <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a></p>
+<p><img class="emoji" title=":loudspeaker:" alt=":loudspeaker:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4e2.png" height="20" width="20"> <strong>Call for Papers &amp; Participation</strong>: ECCV Workshop and Challenge on <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a>.       For those who are new to this topic, please check out the
+          <a href="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/blob/main/README.md" target="_blank">
+      CVinW Reading List
+          </a></p>
 
 <table>
   <tr>
@@ -181,10 +184,7 @@ I have served as an Area Chair (or SPC) for NeurIPS, EMNLP &amp; AAAI, and a Gue
   </tr>
 </table>
 
-      For those who are new to this topic, please check out the
-          <a href="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/blob/main/README.md" target="_blank">
-      CVinW Reading List
-          </a>
+
       
 <hr>
 
