--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
     <a href="https://arxiv.org/abs/2204.08790" target="_blank" rel="noopener noreferrer">ELEVATER</a> is a platform with 20 image classification and 35 object detection public datasets for evaluating language-image models in task-level visual transfer. <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/" target="_blank" rel="noopener noreferrer">[Benchmark Website]</a>
   </li>
   <li>
-  FocalNet [<a href="arXiv%20preprint%20arXiv:2203.11926">paper</a>, <a href="https://github.com/microsoft/FocalNet" target="_blank" rel="noopener noreferrer">code</a>, <a href="https://huggingface.co/spaces/jw2yang/focalnet-modulators" target="_blank" rel="noopener noreferrer">demo</a>, <a href="https://www.microsoft.com/en-us/research/group/deep-learning-group/articles/focalnets-focusing-the-eyes-with-focal-modulation/" target="_blank" rel="noopener noreferrer">blog</a>]  - SoTA on COCO object detection with a simple attention-free architecture
+  FocalNet [<a href="https://arxiv.org/abs/2203.11926">paper</a>, <a href="https://github.com/microsoft/FocalNet" target="_blank" rel="noopener noreferrer">code</a>, <a href="https://huggingface.co/spaces/jw2yang/focalnet-modulators" target="_blank" rel="noopener noreferrer">demo</a>, <a href="https://www.microsoft.com/en-us/research/group/deep-learning-group/articles/focalnets-focusing-the-eyes-with-focal-modulation/" target="_blank" rel="noopener noreferrer">blog</a>]  - SoTA on COCO object detection with a simple attention-free architecture
   </li>
 </ul>
 
@@ -303,7 +303,7 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
 introduces the unified language-image-label contrast; UniCL is an academic-friendly version of <a href="https://arxiv.org/abs/2111.11432" target="_blank" rel="noopener noreferrer">[Microsoft Florence]</a>:
   </li>
   <li>
-    GLIP [<a href="arXiv%20preprint%20arXiv:2112.03857">paper</a>, <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="hhttps://huggingface.co/spaces/haotiz/glip-zeroshot-demo" target="_blank" rel="noopener noreferrer">demo</a>] Oral Presentation, CVPR Best Paper Finalist
+    GLIP [<a href="https://arxiv.org/abs/2112.03857">paper</a>, <a href="https://github.com/microsoft/GLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="hhttps://huggingface.co/spaces/haotiz/glip-zeroshot-demo" target="_blank" rel="noopener noreferrer">demo</a>] Oral Presentation, CVPR Best Paper Finalist
   </li>
   <li>
     RegionCLIP [<a href="https://arxiv.org/abs/2112.09106" target="_blank" rel="noopener noreferrer">paper</a>, <a href="https://github.com/microsoft/RegionCLIP" target="_blank" rel="noopener noreferrer">code</a>, <a href="https://huggingface.co/spaces/CVPR/regionclip-demo" target="_blank" rel="noopener noreferrer">demo</a>]
