--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <li>Vision-and-language pre-training [<a href="https://arxiv.org/abs/2111.11432" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="noopener noreferrer">2</a>, <a href="https://arxiv.org/abs/2112.03857" target="_blank" rel="noopener noreferrer">3</a>]</li>
 
   <li>Deep generative models at scale [<a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="noopener noreferrer">2</a>, 
-    <a href="https://arxiv.org/abs/2111.13792" target="_blank" rel="noopener noreferrer">3</a>
+    <a href="https://arxiv.org/abs/2111.13792" target="_blank" rel="noopener noreferrer">3</a>,
     <a href="https://gligen.github.io/" target="_blank" rel="noopener noreferrer">4</a>
   ]</li>
     <li>Self-supervised visual representation learning [<a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="noopener noreferrer">1</a>]</li>
