--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
         
       
         <tr>
-          <th scope="row">Jan 17, 2023</th>
+          <th scope="row">Feb 27, 2023</th>
           <td>
 
-          Papers are released:
+          CVPR 2023:
           <ul>
             <li>
               <a href="https://react-vl.github.io/" target="_blank" rel="noopener noreferrer">REACT</a> improves foundation models on various vision tasks by customizing them with retrieval-augmented multimodal knowledge
