--- a/index.html
+++ b/index.html
@@ -219,18 +219,18 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
           <th scope="row">Feb, 2023</th>
           <td>
             
-             <p>CVPR2023 Workshop and Challenge on <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a>. For those who are new to this topic, please check out the
+             <p>CVPR2023 Workshop and Challenge on the 2nd <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a>. For those who are new to this topic, please check out the
           <a href="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/blob/main/README.md" target="_blank">
       CVinW Reading List
           </a>. </p>
 
         <table>
           <tr>
-            <td style="width:250px">  <center>
+            <td style="width:300px">  <center>
         <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/cvpr-2023-logo.jpeg" alt="CVinW" width="100" height="50"> [Workshop]</a>  </center> </td>
-            <td style="width:250px"> <center>
+            <td style="width:300px"> <center>
         <a href="https://eval.ai/web/challenges/challenge-page/1931/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/sginw.jpg" alt="ICinW" width="100" height="50"> [SGinW Challenge]</a>   </center> </td>
-            <td style="width:250px">  <center>
+            <td style="width:300px">  <center>
         <a href="https://eval.ai/web/challenges/challenge-page/1973/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/rf100.png" alt="ODinW" width="100" height="50"> [RF100 Challenge]</a>  </center> </td>
           </tr>
         </table>
@@ -244,17 +244,17 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
           <th scope="row">Oct 23, 2022</th>
           <td>
             
-             <p>ECCV Workshop and Challenge on <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a>. Please check out the videos of this event at
+             <p>ECCV 2022 Workshop and Challenge on the 1st <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">Computer Vision in the Wild (CVinW)</a>. Please check out the videos of this event at
           <a href="https://www.youtube.com/@cvinw" target="_blank">[YouTube]</a> <a href="https://space.bilibili.com/628847266/channel/seriesdetail?sid=2887565" target="_blank">[BiliBili]</a>. 
             </p>
 
         <table>
           <tr>
-            <td style="width:250px">  <center>
+            <td style="width:300px">  <center>
         <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer"><img src="https://computer-vision-in-the-wild.github.io/eccv-2022/static/eccv2022/img/ECCV-logo3.png" alt="CVinW" width="100" height="50"> [Workshop]</a>  </center> </td>
-            <td style="width:250px"> <center>
+            <td style="width:300px"> <center>
         <a href="https://eval.ai/web/challenges/challenge-page/1832/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/4e939412-a9c0-46bd-9797-5ba0bd0a9095.jpg" alt="ICinW" width="100" height="50"> [ICinW Challenge]</a>   </center> </td>
-            <td style="width:250px">  <center>
+            <td style="width:300px">  <center>
         <a href="https://eval.ai/web/challenges/challenge-page/1839/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/e3727105-2b29-4c9b-98a6-3d1191884eb5.jpg" alt="ODinW" width="100" height="50"> [ODinW Challenge]</a>  </center> </td>
           </tr>
         </table>
