--- a/index.html
+++ b/index.html
@@ -227,12 +227,20 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
         <table>
           <tr>
             <td style="width:300px">  <center>
-        <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/cvpr-2023-logo.jpeg" alt="CVinW" width="100" height="50"> [Workshop]</a>  </center> </td>
+        <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/cvpr-2023-logo.jpeg" alt="CVinW" width="100" height="50"></a>  </center> </td>
             <td style="width:300px"> <center>
-        <a href="https://eval.ai/web/challenges/challenge-page/1931/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/sginw.jpg" alt="ICinW" width="100" height="50"> [SGinW Challenge]</a>   </center> </td>
+        <a href="https://eval.ai/web/challenges/challenge-page/1931/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/sginw.jpg" alt="ICinW" width="100" height="50"></a>   </center> </td>
             <td style="width:300px">  <center>
-        <a href="https://eval.ai/web/challenges/challenge-page/1973/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/rf100.png" alt="ODinW" width="100" height="50"> [RF100 Challenge]</a>  </center> </td>
+        <a href="https://eval.ai/web/challenges/challenge-page/1973/overview" target="_blank" rel="noopener noreferrer"><img src="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/raw/main/images/rf100.png" alt="ODinW" width="100" height="50"></a>  </center> </td>
           </tr>
+          <tr>
+            <td style="width:300px">  <center>
+        <a href="https://computer-vision-in-the-wild.github.io/cvpr-2023/" target="_blank" rel="noopener noreferrer">[Workshop]</a>  </center> </td>
+            <td style="width:300px"> <center>
+        <a href="https://eval.ai/web/challenges/challenge-page/1931/overview" target="_blank" rel="noopener noreferrer">[SGinW Challenge]</a>   </center> </td>
+            <td style="width:300px">  <center>
+        <a href="https://eval.ai/web/challenges/challenge-page/1973/overview" target="_blank" rel="noopener noreferrer">[RF100 Challenge]</a>  </center> </td>
+          </tr>          
         </table>
 
 
@@ -251,12 +259,19 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
         <table>
           <tr>
             <td style="width:300px">  <center>
-        <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer"><img src="https://computer-vision-in-the-wild.github.io/eccv-2022/static/eccv2022/img/ECCV-logo3.png" alt="CVinW" width="100" height="50"> [Workshop]</a>  </center> </td>
+        <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer"><img src="https://computer-vision-in-the-wild.github.io/eccv-2022/static/eccv2022/img/ECCV-logo3.png" alt="CVinW" width="100" height="50"></a>  </center> </td>
             <td style="width:300px"> <center>
-        <a href="https://eval.ai/web/challenges/challenge-page/1832/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/4e939412-a9c0-46bd-9797-5ba0bd0a9095.jpg" alt="ICinW" width="100" height="50"> [ICinW Challenge]</a>   </center> </td>
+        <a href="https://eval.ai/web/challenges/challenge-page/1832/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/4e939412-a9c0-46bd-9797-5ba0bd0a9095.jpg" alt="ICinW" width="100" height="50"></a>   </center> </td>
             <td style="width:300px">  <center>
-        <a href="https://eval.ai/web/challenges/challenge-page/1839/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/e3727105-2b29-4c9b-98a6-3d1191884eb5.jpg" alt="ODinW" width="100" height="50"> [ODinW Challenge]</a>  </center> </td>
+        <a href="https://eval.ai/web/challenges/challenge-page/1839/overview" target="_blank" rel="noopener noreferrer"><img src="https://evalai.s3.amazonaws.com/media/logos/e3727105-2b29-4c9b-98a6-3d1191884eb5.jpg" alt="ODinW" width="100" height="50"></a>  </center> </td>
           </tr>
+            <td style="width:300px">  <center>
+        <a href="https://computer-vision-in-the-wild.github.io/eccv-2022/" target="_blank" rel="noopener noreferrer">[Workshop]</a>  </center> </td>
+            <td style="width:300px"> <center>
+        <a href="https://eval.ai/web/challenges/challenge-page/1832/overview" target="_blank" rel="noopener noreferrer">[ICinW Challenge]</a>   </center> </td>
+            <td style="width:300px">  <center>
+        <a href="https://eval.ai/web/challenges/challenge-page/1839/overview" target="_blank" rel="noopener noreferrer">[ODinW Challenge]</a>  </center> </td>
+          </tr>          
         </table>
 
 
