--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
           CVPR 2023:
           <ul>
             <li>
-              <a href="https://react-vl.github.io/" target="_blank" rel="noopener noreferrer">REACT</a> improves foundation models on various vision tasks by customizing them with retrieval-augmented multimodal knowledge <a href="https://github.com/microsoft/react" target="_blank" rel="noopener noreferrer">[Code]</a>
+              <a href="https://react-vl.github.io/" target="_blank" rel="noopener noreferrer">REACT</a> improves foundation models on various vision tasks by customizing them with retrieval-augmented multimodal knowledge <a href="https://github.com/microsoft/react" target="_blank" rel="noopener noreferrer">[Code]</a> (Highlights, 2.5%),
             </li>
             <li>
               <a href="https://gligen.github.io/" target="_blank" rel="noopener noreferrer">GLIGEN</a> enables a new capability for frozen text-to-image generation models: open-set grounding. <a href="https://aka.ms/gligen" target="_blank" rel="noopener noreferrer">[Demo]</a> <a href="https://github.com/gligen/GLIGEN" target="_blank" rel="noopener noreferrer">[Code]</a> <a href="https://youtu.be/-MCkU7IAGKs" target="_blank" rel="noopener noreferrer">[YouTube]</a>
