--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
           <th scope="row">April 7, 2023</th>
           <td>
             
-             <a href="https://instruction-tuning-with-gpt-4.github.io/" target="_blank" rel="noopener noreferrer">Instruction Tuning with GPT-4</a> [<a href="https://arxiv.org/abs/2304.03277" target="_blank" rel="noopener noreferrer">Paper</a>] [<a href="https://github.com/Instruction-Tuning-with-GPT-4/GPT-4-LLM" target="_blank" rel="noopener noreferrer">Github</a>] [<a href="https://arxiv.org/abs/2304.03277" target="_blank" rel="noopener noreferrer">My Learnings</a>]
+             <a href="https://instruction-tuning-with-gpt-4.github.io/" target="_blank" rel="noopener noreferrer">Instruction Tuning with GPT-4</a>!  a "first attempt" to use GPT-4 data for LLM self-instruct tuning. [<a href="https://arxiv.org/abs/2304.03277" target="_blank" rel="noopener noreferrer">Paper</a>] [<a href="https://github.com/Instruction-Tuning-with-GPT-4/GPT-4-LLM" target="_blank" rel="noopener noreferrer">Github</a>] [<a href="https://www.linkedin.com/feed/update/urn:li:activity:7049992414995902464/" target="_blank" rel="noopener noreferrer">My Learnings</a>]
             
           </td>
         </tr>
