--- a/index.html
+++ b/index.html
@@ -156,13 +156,14 @@
       <p>I am a principal researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/" target="_blank" rel="noopener noreferrer">Microsoft Research, Redmond</a>. My recent research focuses on large-scale pre-training in computer vision and natural language processing. Some recent works include:</p>
 
 <ul>
+  <li>Building large multimodal models that follow human intents [<a href="http://chunyuan.li/doc/talk_cvinw_instruction_june2.pdf" target="_blank" rel="noopener noreferrer">1</a>]</li>
   <li>Vision-and-language pre-training [<a href="https://arxiv.org/abs/2111.11432" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/objects-are-the-secret-key-to-revealing-the-world-between-vision-and-language/" target="_blank" rel="noopener noreferrer">2</a>, <a href="https://arxiv.org/abs/2112.03857" target="_blank" rel="noopener noreferrer">3</a>]</li>
 
   <li>Deep generative models at scale [<a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="noopener noreferrer">1</a>, <a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="noopener noreferrer">2</a>, 
     <a href="https://arxiv.org/abs/2111.13792" target="_blank" rel="noopener noreferrer">3</a>,
     <a href="https://gligen.github.io/" target="_blank" rel="noopener noreferrer">4</a>
   ]</li>
-    <li>Self-supervised visual representation learning [<a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="noopener noreferrer">1</a>]</li>
+    <!-- <li>Self-supervised visual representation learning [<a href="https://arxiv.org/abs/2106.09785" target="_blank" rel="noopener noreferrer">1</a>]</li> -->
 </ul>
 
 <p>I obtained my PhD in machine learning at <a href="https://duke.edu/" target="_blank" rel="noopener noreferrer">Duke University</a>, advised by Prof. <a href="http://people.ee.duke.edu/~lcarin" target="_blank" rel="noopener noreferrer">Lawrence Carin</a>. My PhD research studies <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="noopener noreferrer">probabilistic deep learning</a>. 
@@ -170,11 +171,11 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
 
 
 
-<hr>
+<!-- <hr>
 
 <img class="emoji" title=":loudspeaker:" alt=":loudspeaker:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4e2.png" height="20" width="20">
               <em>International Journal of Computer Vision (IJCV)</em> special issue on 
- <a href="https://www.springer.com/journal/11263/updates/23503548" target="_blank" rel="noopener noreferrer">``Promises and Dangers of Large Vision Models’’</a>. Submission deadline: April 1st, 2023 <img class="emoji" title=":pencil:" alt=":pencil:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4dd.png" height="20" width="20"> 
+ <a href="https://www.springer.com/journal/11263/updates/23503548" target="_blank" rel="noopener noreferrer">``Promises and Dangers of Large Vision Models’’</a>. Submission deadline: April 1st, 2023 <img class="emoji" title=":pencil:" alt=":pencil:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4dd.png" height="20" width="20">  -->
 
 
       
