--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ I have served as an Area Chair for NeurIPS, ICML, EMNLP &amp; AAAI, and a Guest 
           <th scope="row">April 17, 2023</th>
           <td>
             
-             <a href="https://llava-vl.github.io/" target="_blank" rel="noopener noreferrer">Visual Instruction Tuning with GPT-4</a>! We release LLaVA, a Large Language-and-Vision Assistant that mimics multimodal GPT-4 level capabilities. 
+             <a href="https://llava-vl.github.io/" target="_blank" rel="noopener noreferrer">Visual Instruction Tuning with GPT-4</a>! We release LLaVA, a Large Language-and-Vision Assistant towards multimodal GPT-4 level capabilities. 
              [<a href="https://llava-vl.github.io/" target="_blank" rel="noopener noreferrer">Project</a>] [<a href="https://arxiv.org/abs/2304.08485" target="_blank" rel="noopener noreferrer">Paper</a>] [<a href="https://github.com/haotian-liu/LLaVA" target="_blank" rel="noopener noreferrer">Github</a>] [<a href="https://llava.hliu.cc/" target="_blank" rel="noopener noreferrer">Demo</a>] [<a href="https://huggingface.co/datasets/liuhaotian/LLaVA-Instruct-150K" target="_blank" rel="noopener noreferrer">Data</a>] [<a href="https://huggingface.co/liuhaotian/LLaVA-13b-delta-v0" target="_blank" rel="noopener noreferrer">Model</a>]
             
           </td>
