--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </ul>
 
 <p>I obtained my PhD in machine learning at <a href="https://duke.edu/" target="_blank" rel="noopener noreferrer">Duke University</a>, advised by Prof. <a href="http://people.ee.duke.edu/~lcarin" target="_blank" rel="noopener noreferrer">Lawrence Carin</a>. My PhD research studies <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="noopener noreferrer">probabilistic deep learning</a>. 
-I have served as an Area Chair for NeurIPS, ICML, ICLR, EMNLP &amp; AAAI, and a Guest Editor of <a href="https://www.springer.com/journal/11263/updates/23503548" target="_blank" rel="noopener noreferrer">IJCV</a> on the Promises and Dangers of Large Vision Models.</p>
+I have served as an Area Chair for NeurIPS, ICML, ICLR, EMNLP &amp; AAAI, and a Guest Editor of <a href="https://www.springer.com/journal/11263/updates/23503548" target="_blank" rel="noopener noreferrer">IJCV</a> on ``the promises and dangers of large vision models''.</p>
 
 
 
