--- a/index.html
+++ b/index.html
@@ -192,6 +192,41 @@ I have served as an Area Chair for NeurIPS, ICML, ICLR, EMNLP &amp; AAAI, and a 
       <table class="table table-sm table-borderless">
 
         <tr>
+          <th scope="row">Oct/Nov, 2023</th>
+          <td>
+
+          LLaVA is upgraded:
+          <ul>
+            <li>
+              <a href="https://llava-vl.github.io/" target="_blank" rel="noopener noreferrer">LLaVA-1.5</a> achieves SoTA on 11 benchmarks among open-source LMMs. It utilizes all public data, completes training in ~1 day on a single 8-A100 node, and surpasses prior SoTA that use billion-scale data.
+            	[<a href="https://llava-vl.github.io/" target="_blank" rel="noopener noreferrer">Project</a>] 
+            	[<a href="https://arxiv.org/abs/2310.03744" target="_blank" rel="noopener noreferrer">Paper</a>] 
+            	[<a href="https://github.com/haotian-liu/LLaVA" target="_blank" rel="noopener noreferrer">Github</a>] 
+            	[<a href="https://llava.hliu.cc/" target="_blank" rel="noopener noreferrer">Demo</a>] 
+            	[<a href="https://github.com/haotian-liu/LLaVA/blob/main/docs/MODEL_ZOO.md" target="_blank" rel="noopener noreferrer">Model Zoo</a>] 
+            </li>
+            <li>
+            	<a href="https://llava-vl.github.io/llava-interactive/" target="_blank" rel="noopener noreferrer">LLaVA-Interactive</a>: Experience the future of human-AI multimodal interaction with an all-in-one demo for image chat, segmentation, generation and editing.
+            	[<a href="https://llava-vl.github.io/llava-interactive/" target="_blank" rel="noopener noreferrer">Project</a>] 
+            	[<a href="https://arxiv.org/abs/2311.00571" target="_blank" rel="noopener noreferrer">Paper</a>] 
+            	[<a href="https://github.com/LLaVA-VL/LLaVA-Interactive-Demo" target="_blank" rel="noopener noreferrer">Github</a>] 
+            	[<a href="https://llavainteractive.ngrok.io/" target="_blank" rel="noopener noreferrer">Demo</a>] 
+            </li>             
+            <li>
+            	<a href="https://llava-vl.github.io/llava-plus/" target="_blank" rel="noopener noreferrer">LLaVA-Plus</a> expands the capabilities of LLaVA by learning to use external tools for creating multimodal agents. 
+            	[<a href="https://llava-vl.github.io/llava-plus/" target="_blank" rel="noopener noreferrer">Project</a>] 
+            	[<a href="https://arxiv.org/abs/2311.05437" target="_blank" rel="noopener noreferrer">Paper</a>] 
+            	[<a href="https://github.com/LLaVA-VL/LLaVA-Plus-Codebase" target="_blank" rel="noopener noreferrer">Github</a>] 
+            	[<a href="https://llavaplus.ngrok.io/" target="_blank" rel="noopener noreferrer">Demo</a>] 
+            </li>
+          </ul>
+
+
+            
+          </td>
+        </tr>
+
+        <tr>
           <th scope="row">September 20, 2023</th>
           <td>
             A survey paper is released on <a href="https://arxiv.org/abs/2309.10020" target="_blank" rel="noopener noreferrer">``Multimodal Foundation Models: From Specialists to General-Purpose Assistants''</a>. This is based our <a href="https://vlp-tutorial.github.io/2023" target="_blank" rel="noopener noreferrer">CVPR 2023 Tutorial</a>.
