--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ I have served as an Area Chair for NeurIPS, ICML, ICLR, EMNLP &amp; AAAI, and a 
         <tr>
           <th scope="row">September 20, 2023</th>
           <td>
-            A survey paper is released on <a href="https://arxiv.org/abs/2309.10020" target="_blank" rel="noopener noreferrer">``Multimodal Foundation Models: From Specialists to General-Purpose Assistants''</a>. This is based our <a href="https://vlp-tutorial.github.io/2023" target="_blank" rel="noopener noreferrer">CVPR 2023 Tutorial</a>.
+            A 110-page paper is released to share our perspective on LMMs: <a href="https://arxiv.org/abs/2309.10020" target="_blank" rel="noopener noreferrer">``Multimodal Foundation Models: From Specialists to General-Purpose Assistants''</a>. This is based our <a href="https://vlp-tutorial.github.io/2023" target="_blank" rel="noopener noreferrer">CVPR 2023 Tutorial</a>.
              [<a href="https://arxiv.org/abs/2306.14895" target="_blank" rel="noopener noreferrer">Note on Large Multimodal Models</a>] [<a href="https://datarelease.blob.core.windows.net/tutorial/vision_foundation_models_2023/slides/Chunyuan_cvpr2023_tutorial_lmm.pdf" target="_blank" rel="noopener noreferrer">Slides</a>] [<a href="https://youtu.be/mkI7EPD1vp8" target="_blank" rel="noopener noreferrer">YouTube</a>] [<a href="https://www.bilibili.com/video/BV1Ng4y1T7v3/" target="_blank" rel="noopener noreferrer">Bilibili</a>] 
           </td>
         </tr>
