--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
           
           <div class="social">
             <div class="contact-icons">
-              <a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar fa-sm"></i></a>
-              <a href="https://github.com/ChunyuanLI" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-sm"></i></a>
-              <a href="https://www.linkedin.com/in/chunyuan-li-039b6a44" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-sm"></i></a>
-              <a href="https://twitter.com/ChunyuanLi" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-sm"></i></a>
-              <a href="mailto:%6C%69%63%68%75%6E%79%75%61%6E%32%34@%67%6D%61%69%6C.%63%6F%6D"><i class="fas fa-envelope fa-sm"></i></a>
+              <a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar fa-xs"></i></a>
+              <a href="https://github.com/ChunyuanLI" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-xs"></i></a>
+              <a href="https://www.linkedin.com/in/chunyuan-li-039b6a44" title="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-xs"></i></a>
+              <a href="https://twitter.com/ChunyuanLi" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-xs"></i></a>
+              <a href="mailto:%6C%69%63%68%75%6E%79%75%61%6E%32%34@%67%6D%61%69%6C.%63%6F%6D"><i class="fas fa-envelope fa-xs"></i></a>
             </div>
           </div> 
           
